<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignInFragment">

    <fragment
        android:id="@+id/sign_in_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <EditText
                android:id="@+id/signInUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_here"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/signInPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_here"/>

            <Button
                android:id="@+id/registrationButton"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:text="@string/sign_in"/>



        </LinearLayout>
    </fragment>


</FrameLayout>