<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ChangeFragment">

<fragment
    android:id="@+id/change_account_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical">

        <TextView
            android:id="@+id/changePFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_your_profile_picture" />

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src=""
            android:contentDescription="@string/hello_blank_fragment" />

        <Button
            android:id="@+id/changePhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_it" />

        <Button
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"/>

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:importantForAutofill="no"
            android:padding="30dp"/>

        <EditText
            android:id="@+id/editName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:importantForAutofill="no"
            android:padding="30dp"/>

        <EditText
            android:id="@+id/editSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:importantForAutofill="no"
            android:padding="30dp"/>

        <EditText
            android:id="@+id/editBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:importantForAutofill="no"
            android:padding="30dp"/>

        <Button
            android:id="@+id/sendChanges"
            android:layout_width="80sp"
            android:layout_height="40sp"
            android:text="@string/apply_changes"/>

    </LinearLayout>

</fragment>

</FrameLayout>